--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 
     <properties>
         <hibernate.version>4.3.6.Final</hibernate.version>
-        <mysql.connector.version>5.1.31</mysql.connector.version>
     </properties>
 
     <dependencies>
@@ -21,12 +20,13 @@
             <version>${hibernate.version}</version>
         </dependency>
 
-        <!-- MySQL -->
+        <!-- PosgresSQL -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.connector.version}</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1200-jdbc41</version>
         </dependency>
+
     </dependencies>
-    
+
 </project>
