--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,12 @@
 # Required metadata
-sonar.projectKey=org.sonarqube:java-simple-sq-scanner
-sonar.projectName=Java :: Simple Project Not Compiled :: SonarQube Scanner
+sonar.projectKey=HelloHibernate
+sonar.projectName=HelloHibernate
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src
+sonar.sources=src/main/java
+sonar.tests=src/test/java
+sonar.java.binaries=target/classes
 
 # Language
 sonar.language=java
